# IRIS

./: .gitignore  Dockerfile  LICENSE  ML-Project-typing-philosphy.md  README.md  build_image.sh  config.rcp.yaml  config.yaml  pyproject.toml  ruff.toml  run_benchmark.sh  run_iris.sh
.github/workflows/: protect-default-branch.yml
action-recognition/: README.md
benchmarks/: HuggingFaceTB_SmolVLM2-500M-Video-Instruct_benchmark.json  combined_benchmark.json  unsloth_Qwen2.5-VL-3B-Instruct-bnb-4bit_benchmark.json  unsloth_Qwen2.5-VL-7B-Instruct-bnb-4bit_benchmark.json
configs/: config.yaml
configs/vlm/: serve.yaml  train.yaml  train_a100.yaml  train_mini.yaml
configs/vlm/hardware/: a100.yaml  mac.yaml  v100.yaml  v100_debug.yaml
data/: README.md
deep_fusion_strategy/: DATASET.md  MODEL_CARD.md  README.md  USAGE.md
deep_fusion_strategy/configs/: config_videomae_qwen_contrastive_new_resampler.yaml
deep_fusion_strategy/notebooks/: data_processing_finebio.ipynb  requirements_data_processing_finebio.txt
deep_fusion_strategy/outputs/predictions/: predictions_videomae_qwen.json  qwen_baseline_results.json
deep_fusion_strategy/outputs/prompt_json/: structured_json_k3.json  structured_json_k5.json
deep_fusion_strategy/scripts/training/videomaev2_finetuning/: README.md  run_class_finetuning.py
deep_fusion_strategy/scripts/utils/: create_lab_annotations.py
docs/: API.md  api_endpoint_analysis.md  cluster-setup.md  live-mode-batching-strategies.md  rcp-guide.md  setup.md
models/: README.md
notebooks/: 00_qwen_docs_video_understanding.ipynb  03_simple_video_loop.ipynb  README.md
notebooks/vlm/: 01_basic_vlm_inference.ipynb  02_transformers_hf.ipynb  04_finebio_preprocessing.ipynb  04_queue_testing.ipynb  05_benchmarking.ipynb  05_dataset_tests.ipynb  05_sampling_tests.ipynb  Qwen2_5_VL_(7B)_Vision.ipynb
scripts/: README.md  runai-command.sh  upload_to_hf.py
scripts/client/: run_client.py  test_camera.py  test_websocket.py
scripts/dataset/: create_finebio_split.py  create_training_data.py  dataset_config.example.yaml  dataset_config.py  dataset_config.yaml  generate_ground_truth.py  process_dataset.py  process_dataset_parallel.py  process_finebio_dataset.py
scripts/server/: test_server.py
sft-vlm-finetune/: README.md
sft-vlm-finetune/dataset/: README.md  create_training_data.py  process_dataset.py  visualize_sampling.py
sft-vlm-finetune/dataset/debug/: verify_masking.py
sft-vlm-finetune/scripts/: README.md  debug_data_pipeline.py  evaluate.py  inference.py  train.py
sft-vlm-finetune/vlm/: config.py  data.py  models.py  trainer.py
sft-vlm-finetune/vlm/inference/: benchmark_inference.py
src/: main.py
src/config/: models.py
src/inference/: model_loader.py  queue.py
src/iris/: README.md  config.py  main.py
src/iris/action_recognition/: README.md
src/iris/action_recognition/data/: augmentation.py  preprocessing.py  video_dataset.py
src/iris/action_recognition/models/: model_utils.py  videomae_classifier.py
src/iris/action_recognition/training/: train_classifier.py
src/iris/cli/: benchmark.py  client.py  local_test.py  server.py
src/iris/cli/finetune/: debug_data_pipeline.py  evaluate.py  inference.py  inference_batched.py  quick_test.py  train.py  vision_ablation_test.py
src/iris/client/: README.md  config.py
src/iris/client/capture/: __init__.py  camera.py  video_file.py
src/iris/client/streaming/: websocket_client.py
src/iris/client/web/: app.py  database.py  dependencies.py  messages.py  report_generator.py  repositories.py  routes.py  run_dev.py
src/iris/client/web/frontend/: README.md  package-lock.json  package.json  vite.config.ts
src/iris/client/web/frontend/src/: App.tsx  index.css
src/iris/client/web/static/: client.js  index.html  style.css
src/iris/config/: models.py
src/iris/config/action_recognition/: finetune_simple_format.yaml
src/iris/dataset/: cleanup_frames.py  create_training_data.py  dataset_config.py  dataset_config.yaml  finebio_processing_tests.py  logic.py  process_dataset.py  training_format.py  visualize_sampling.py
src/iris/dataset/debug/: verify_masking.py
src/iris/server/: README.md  app.py  config.py  dependencies.py  frame_buffer.py  lifecycle.py  logging_handler.py  main.py  metrics.py  model_loader.py  video_processor.py
src/iris/server/inference/: __init__.py  executor.py
src/iris/server/inference/jobs/: __init__.py  base.py  batch_video.py  single_frame.py  video.py
src/iris/server/jobs/: __init__.py  config.py  factory.py  manager.py  types.py
src/iris/server/routes/: __init__.py  config.py  jobs.py  system.py  websocket.py
src/iris/utils/: logging.py
src/iris/videos/: README.md
src/iris/vlm/: README.md  config.py  data.py  dataset.py  models.py  qwen2_5_vl_(7b)_vision.py  train.py  trainer.py
src/iris/vlm/inference/: benchmark_inference.py  model_loader.py
src/iris/vlm/inference/queue/: jobs.py  queue.py
src/iris/vlm/memory/: __init__.py  buffer.py
src/iris/vlm/models/: custom_qwen.py
tests/: __init__.py  conftest.py
tests/client/: conftest.py
tests/client/web/: __init__.py  test_database.py  test_report_generator.py  test_repositories.py
tests/fixtures/: database.py  images.py  sample_data.py
tests/server/: conftest.py  test_frame_buffer.py  test_job_config.py  test_metrics.py
tests/server/core/: __init__.py  test_frame_buffer.py  test_metrics.py
tests/server/jobs/: __init__.py  test_batch_video.py  test_config.py
vlm-finetuning/: README.md
vlm_fusion/: DATASET.md  MODEL_CARD.md  README.md
vlm_fusion/configs/: config_videomae_qwen.yaml
vlm_fusion/notebooks/: data_processing_finebio.ipynb  requirements.txt
vlm_fusion/outputs/prompt_strat_predictions/: natural_language_k3.json  structured_json_k1.json
vlm_fusion/scripts/evaluation/: evaluate_prompt_injection.py  evaluate_videomae_qwen.py
vlm_fusion/scripts/training/action_recognition/: build.py  engine_for_finetuning.py
vlm_fusion/scripts/training/deep_fusion/: train.py
vlm_fusion/scripts/utils/: push_to_hf_videomaev2_model.py
(+60 files in other folders)
