[project]
name = "iris"
version = "0.1.0"
description = "IRIS - Video understanding ML system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "ruff>=0.13.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",

    "websockets>=15.0.1",
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",

    "opencv-python>=4.11.0.86 ; sys_platform == 'darwin'",         # Mac: full version with GUI
    "opencv-python-headless>=4.11.0.86 ; sys_platform == 'linux'", # Pi/V100: headless
    "threaded-videocapture>=1.0.1",
    "ffmpeg-python>=0.2.0",

    "google-genai>=1.53.0",
]

[dependency-groups]
dev = ["google-generativeai>=0.8.5", "ipykernel>=6.29.0"]

# Server-only dependencies (V100 + Mac dev)
server = [
    "transformers>=4.57.3",
    "accelerate>=1.12.0",
    "qwen-vl-utils>=0.0.14",
    "num2words>=0.5.14",

    "torch>=2.5.1,<2.6",
    "torchvision>=0.20.1,<0.21",
    "torchaudio>=2.5.1,<2.6",

    # Linux/V100 specific (no torchcodec - it pulls CUDA 12.4)
    "bitsandbytes>=0.48.2 ; platform_system == 'Linux'",
    "nvidia-ml-py>=11.5.0 ; platform_system == 'Linux'",
    
    # Mac only (torchcodec works fine on Mac)
    "torchcodec>=0.7.0 ; sys_platform == 'darwin'",
]

[project.scripts]
iris-train = "iris.vlm.train:main"
iris-client = "iris.client.web.app:main"
iris-server = "iris.server.app:main"
iris-test = "iris.cli.local_test:cli"
iris = "iris.cli.local_test:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iris"]

# ============================================
# UV PYTORCH CONFIGURATION
# ============================================

# Define PyTorch CUDA 12.1 index
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# Point PyTorch packages to CUDA 12.1 index on Linux
[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
